--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 		<dependency>
+		    <!-- 包含spring-boot-starter-jdbc，可以使用JdbcTemplate -->
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>1.3.0</version>
