--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,22 @@
 debug=false
-spring.datasource.url=jdbc:mysql://localhost:3306/study?useSSL=false&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
-spring.datasource.password=000000
-spring.datasource.username=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+db.url=jdbc:mysql://localhost:3306/study?useSSL=false&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+db.username=root
+db.password=000000
+db.initialSize=1
+db.minIdle=1
+db.maxActive=20
+db.maxWait=60000
+db.timeBetweenEvictionRunsMillis=60000
+db.minEvictableIdleTimeMillis=300000
+db.validationQuery=SELECT 1
+db.testWhileIdle=true
+db.testOnBorrow=false
+db.testOnReturn=false
+db.poolPreparedStatements=true
+db.maxPoolPreparedStatementPerConnectionSize=20
+db.filters=wall
+db.removeAbandoned=true
+db.removeAbandonedTimeout=1800
+db.logAbandoned=true
 server.port=80
 logging.level.root=INFO
