--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>druid</artifactId>
-			<version>1.1.0</version>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
