--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,21 +2,17 @@ debug=false
 db.url=jdbc:mysql://localhost:3306/study?useSSL=false&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
 db.username=root
 db.password=000000
+db.driverClassName=com.mysql.jdbc.Driver
 db.initialSize=1
 db.minIdle=1
-db.maxActive=20
+db.maxActive=100
+db.maxIdle=20
 db.maxWait=60000
-db.timeBetweenEvictionRunsMillis=60000
-db.minEvictableIdleTimeMillis=300000
-db.validationQuery=SELECT 1
-db.testWhileIdle=true
-db.testOnBorrow=false
-db.testOnReturn=false
-db.poolPreparedStatements=true
-db.maxPoolPreparedStatementPerConnectionSize=20
-db.filters=wall
 db.removeAbandoned=true
-db.removeAbandonedTimeout=1800
-db.logAbandoned=true
+db.removeAbandonedTimeout=180
+db.testOnBorrow=true
+db.testWhileIdle=true
+db.timeBetweenEvictionRunsMillis=3600000
+db.numTestsPerEvictionRun=100
 server.port=80
 logging.level.root=INFO
