--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ db.timeBetweenEvictionRunsMillis=3600000
 db.numTestsPerEvictionRun=100
 server.port=80
 logging.level.root=INFO
+mybatis.configuration.lazy-loading-enabled=true
+mybatis.configuration.aggressive-lazy-loading=false
