--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ server.port=80
 logging.level.root=INFO
 mybatis.configuration.lazy-loading-enabled=true
 mybatis.configuration.aggressive-lazy-loading=false
+mybatis.configuration.cache-enabled=true
